--- a/get_together/templates/404.html
+++ b/get_together/templates/404.html
@@ -2,7 +2,7 @@
 {% load static i18n %}
 
 {% block content %}
-    <center>
-        <img src="{% static 'img/404.png' %}" title="{% trans "Not Found" %}"/>
-    </center>
+<center>
+    <img src="{% static 'images/404.png' %}" title="{% trans "Not Found" %}" />
+</center>
 {% endblock %}
