--- a/get_together/templates/500.html
+++ b/get_together/templates/500.html
@@ -2,7 +2,7 @@
 {% load static i18n %}
 
 {% block content %}
-    <center>
-        <img src="{% static 'img/500.png' %}" title="{% trans "Server Error" %}"/>
-    </center>
+<center>
+    <img src="{% static 'images/500.png' %}" title="{% trans "Server Error" %}" />
+</center>
 {% endblock %}
