--- a/get_together/templates/get_together/events/create_event_team_select.html
+++ b/get_together/templates/get_together/events/create_event_team_select.html
@@ -1,37 +1,32 @@
 {% extends "get_together/base.html" %}
 {% load static i18n %}
 
-{% block styles %}
-    <link href="{% static 'css/bootstrap-album.css' %}" rel="stylesheet"/>
-
-{% endblock %}
-
 {% block content %}
 <h2>{% blocktrans %}Select which team:{% endblocktrans %}</h2>
 <div class="container">
   <div class="row">
-{% for team in teams %}
+    {% for team in teams %}
     <div class="col-md-4">
       <div class="card mb-4 box-shadow">
         <div class="card-banner">
           <a href="{% url 'create-event' team.id %}">
-          <img class="card-img-top" src="{{team.card_img_url}}" alt="{{team.name}}">
+            <img class="card-img-top" src="{{team.card_img_url}}" alt="{{team.name}}">
           </a>
           <p class="card-title">{{team.name}}</p>
         </div>
         <div class="card-body">
           <p class="card-text"><strong>{{team.city}}</strong></p>
           <div class="d-flex justify-content-between align-items-center">
-            <small class="text-muted">{% blocktrans count member_count=team.members.count %}{{ member_count }} member{% plural %}{{ member_count }} members{% endblocktrans %}</small>
+            <small class="text-muted">{% blocktrans count member_count=team.members.count %}{{ member_count }}
+              member{% plural %}{{ member_count }} members{% endblocktrans %}</small>
             <div class="btn-group">
-                <a class="btn btn-success" href="{% url 'create-event' team.id %}">{% trans "Create Event" %}</a></span>
+              <a class="btn btn-success" href="{% url 'create-event' team.id %}">{% trans "Create Event" %}</a></span>
             </div>
           </div>
         </div>
       </div>
     </div>
-{% endfor %}
+    {% endfor %}
   </div>
 </div>
 {% endblock %}
-
