--- a/get_together/templates/get_together/events/show_series.html
+++ b/get_together/templates/get_together/events/show_series.html
@@ -4,30 +4,15 @@
 {% block add_to_title %} | {{series.name}}{% endblock %}
 
 {% block meta %}
-  <meta property="og:url"           content="{{series.get_full_url}}" />
-  <meta property="og:type"          content="website" />
-  <meta property="og:title"         content="{{series.name}}" />
-  <meta property="og:description"   content="{{series.summary}}" />
-  {% if series.team.category %}
-  <meta property="og:image"         content="{{series.team.category.img_url}}" />
-  {% else %}
-  <meta property="og:image"         content="https://gettogether.community{% static 'img/team_placeholder.png' %}" />
-  {% endif %}
-{% endblock %}
-
-{% block styles %}
-    <link href="{% static 'css/bootstrap-album.css' %}" rel="stylesheet"/>
-    <style>
-.gt-profile {
-    position: relative;
-}
-.gt-profile .gt-profile-badges {
-    position: relative;
-    top: 16px;
-    left: -42px;
-}
-
-    </style>
+<meta property="og:url" content="{{series.get_full_url}}" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="{{series.name}}" />
+<meta property="og:description" content="{{series.summary}}" />
+{% if series.team.category %}
+<meta property="og:image" content="{{series.team.category.img_url}}" />
+{% else %}
+<meta property="og:image" content="https://gettogether.community{% static 'images/team_placeholder.png' %}" />
+{% endif %}
 {% endblock %}
 
 {% block content %}
@@ -36,47 +21,56 @@
         <div class="col-md-9">
             <h2>{{ series.name }}
                 {% if can_edit_event %}
-                <a href="{% url 'edit-series' series.id %}" class="btn btn-secondary btn-sm"><i class="fa fa-edit"></i> {% trans "Edit Series" %}</a>
+                <a href="{% url 'edit-series' series.id %}" class="btn btn-secondary btn-sm"><i class="fa fa-edit"></i>
+                    {% trans "Edit Series" %}</a>
                 {% endif %}
             </h2>
-            <p class="text-muted">{{ theme.text_labels.hosted_by }} <a href="{% url "show-team-by-slug" team.slug %}">{{ team.name }}</a></p>
-            <hr/>
+            <p class="text-muted">{{ theme.text_labels.hosted_by }} <a
+                    href="{% url "show-team-by-slug" team.slug %}">{{ team.name }}</a></p>
+            <hr />
 
             <p>{{ series.summary|markdown }}</p>
 
             <table class="table">
-            {% if series.parent %}
-            <tr>
-	            <td width="120px"><b>{% trans "Part of:" %}</b></td><td><a href="{{ series.parent.get_absolute_url }}" target="_blank">{{ series.parent.name }}</a></td>
-            </tr>
-            {% endif %}
-            <tr>
-	            <td width="120px"><b>{% trans "Repeats:" %}</b></td><td>
-                {% for rule in series.recurrences.rrules %}
-                {{rule.to_text|capfirst}}
-	            {% endfor %}
-            </td>
-            </tr>
-            <tr>
-	            <td width="120px"><b>{% trans "Time:" %}</b></td><td>{{ series.start_time }} - {{ series.end_time }}</td>
-            </tr>
-            <tr>
-	            <td width="120px"><b>{% trans "Place:" %}</b></td><td>
-                      {% if series.place %}
-                          <a class="" href="{% url 'show-place' series.place.id %}">{{ series.place.name }}</a>
-                          {% if can_edit_event %}<a href="{% url 'add-place-to-series' series.id %}" class="btn btn-secondary btn-sm">{% trans "Change" %}</a>{% endif %}
-                      {% elif can_edit_event %}
-                          <a class="" href="{% url 'add-place-to-series' series.id %}">{% trans "No place selected yet." %}</a>
-                      {% else %}
+                {% if series.parent %}
+                <tr>
+                    <td width="120px"><b>{% trans "Part of:" %}</b></td>
+                    <td><a href="{{ series.parent.get_absolute_url }}" target="_blank">{{ series.parent.name }}</a></td>
+                </tr>
+                {% endif %}
+                <tr>
+                    <td width="120px"><b>{% trans "Repeats:" %}</b></td>
+                    <td>
+                        {% for rule in series.recurrences.rrules %}
+                        {{rule.to_text|capfirst}}
+                        {% endfor %}
+                    </td>
+                </tr>
+                <tr>
+                    <td width="120px"><b>{% trans "Time:" %}</b></td>
+                    <td>{{ series.start_time }} - {{ series.end_time }}</td>
+                </tr>
+                <tr>
+                    <td width="120px"><b>{% trans "Place:" %}</b></td>
+                    <td>
+                        {% if series.place %}
+                        <a class="" href="{% url 'show-place' series.place.id %}">{{ series.place.name }}</a>
+                        {% if can_edit_event %}<a href="{% url 'add-place-to-series' series.id %}"
+                            class="btn btn-secondary btn-sm">{% trans "Change" %}</a>{% endif %}
+                        {% elif can_edit_event %}
+                        <a class=""
+                            href="{% url 'add-place-to-series' series.id %}">{% trans "No place selected yet." %}</a>
+                        {% else %}
                         {% trans "No place selected yet." %}
-                      {% endif %}
-	            </td>
-            </tr>
-            {% if series.web_url %}
-            <tr>
-	            <td width="120px"><b>{% trans "Website:" %}</b></td><td><a href="{{ series.web_url }}" target="_blank">{{ series.web_url }}</a></td>
-            </tr>
-            {% endif %}
+                        {% endif %}
+                    </td>
+                </tr>
+                {% if series.web_url %}
+                <tr>
+                    <td width="120px"><b>{% trans "Website:" %}</b></td>
+                    <td><a href="{{ series.web_url }}" target="_blank">{{ series.web_url }}</a></td>
+                </tr>
+                {% endif %}
             </table>
 
             <div class="container mt-3">
@@ -87,16 +81,21 @@
         <div class="col-md-3">
             <div class="container">
                 <div class="row">
-                    <div class="col"><h4>{% trans "Instances" %}</h4><hr/></div>
+                    <div class="col">
+                        <h4>{% trans "Instances" %}</h4>
+                        <hr />
+                    </div>
                 </div>
                 {% for instance in instances %}
                 <div class="row mb-3">
                     <div class="col media gt-profile">
-                      <div class="media-body">
-                        <h6 class="mt-2 mb-0">
-                          {% if instance.status == event.CANCELED %}<del>{% endif %}<a href="{{ instance.get_absolute_url }}">{{instance.local_start_time.date}}</a>{% if instance.status == event.CANCELED %}</del> ({% trans "Canceled" %}){% endif %}
-                          <br/><small class="text-muted">{{ instance.name }}</small>
-                      </div>
+                        <div class="media-body">
+                            <h6 class="mt-2 mb-0">
+                                {% if instance.status == event.CANCELED %}<del>{% endif %}<a
+                                        href="{{ instance.get_absolute_url }}">{{instance.local_start_time.date}}</a>{% if instance.status == event.CANCELED %}</del>
+                                ({% trans "Canceled" %}){% endif %}
+                                <br /><small class="text-muted">{{ instance.name }}</small>
+                        </div>
                     </div>
                 </div>
                 {% endfor %}
