--- a/get_together/templates/get_together/speakers/list_user_presentations.html
+++ b/get_together/templates/get_together/speakers/list_user_presentations.html
@@ -1,68 +1,64 @@
 {% extends "get_together/base.html" %}
 {% load static tz i18n %}
 
-{% block styles %}
-    <link href="{% static 'css/bootstrap-album.css' %}" rel="stylesheet"/>
-
-{% endblock %}
-
 {% block content %}
-        <div class="container">
-{% if not has_talks %}
-            <div class="alert alert-warning">{% trans "You must create a talk before it can be proposed to this event." %}</div>
-{% endif %}
+<div class="container">
+  {% if not has_talks %}
+  <div class="alert alert-warning">{% trans "You must create a talk before it can be proposed to this event." %}</div>
+  {% endif %}
 
-{% if proposed_talks %}
-        <div class="row">
-{% for presentation in proposed_talks %}
-            <div class="col-md-4">
-              <div class="card mb-4 box-shadow" style="width: 18rem;">
-                <div class="card-body">
-                  <p class="card-title" style="height: 2rem;">
-                      <strong><a href="{% url 'show-talk' presentation.talk.id %}">{{presentation.talk.title}}</a></strong>
-                    {% if presentation.status == -1 %}
-                        <span class="badge badge-danger" >{% trans "Declined" %}</span>
-                    {% elif presentation.status == 1 %}
-                        <span class="badge badge-success" >{% trans "Accepted" %}</span>
-                    {% else %}
-                        <span class="badge badge-info" >{% trans "Submitted" %}</span>
-                    {% endif %}
-                  </p>
-                  <div class="card-text">
-                    <small class="text-muted mb-1">{{ presentation.talk.speaker }}</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-{% endfor %}
+  {% if proposed_talks %}
+  <div class="row">
+    {% for presentation in proposed_talks %}
+    <div class="col-md-4">
+      <div class="card mb-4 box-shadow" style="width: 18rem;">
+        <div class="card-body">
+          <p class="card-title" style="height: 2rem;">
+            <strong><a href="{% url 'show-talk' presentation.talk.id %}">{{presentation.talk.title}}</a></strong>
+            {% if presentation.status == -1 %}
+            <span class="badge badge-danger">{% trans "Declined" %}</span>
+            {% elif presentation.status == 1 %}
+            <span class="badge badge-success">{% trans "Accepted" %}</span>
+            {% else %}
+            <span class="badge badge-info">{% trans "Submitted" %}</span>
+            {% endif %}
+          </p>
+          <div class="card-text">
+            <small class="text-muted mb-1">{{ presentation.talk.speaker }}</small>
+          </div>
         </div>
-        <hr/>
-{% endif %}
-        <div class="row">
-{% for talk in available_talks %}
-            <form action="{% url 'propose-event-talk' event.id %}" method="POST">
-            {% csrf_token %}
-            <div class="col-md-4">
-              <div class="card mb-4 box-shadow" style="width: 18rem;">
-                <div class="card-body">
-                  <p class="card-title" style="height: 2rem;"><strong><a href="{% url 'show-talk' talk.id %}">{{talk.title}}</a></strong></p>
-                  <div class="card-text">
-                    <small class="text-muted mb-1">{{ talk.speaker }}</small>
-                    <button class="btn btn-primary" type="submit" name="talk_id" value="{{talk.id}}">{% trans "Propose" %}</a></span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            </form>
-{% endfor %}
-        </div>
-        <div class="row">
-            <div class="col">
-                <a href="{{event.get_absolute_url}}" class="btn btn-secondary">{% trans "Cancel" %}</a>
-                <a href="{% url 'add-talk' %}?event={{event.id}}" class="btn btn-success">{% trans "New Talk" %}</a>
-            </div>
-        </div>
+      </div>
     </div>
+    {% endfor %}
+  </div>
+  <hr />
+  {% endif %}
+  <div class="row">
+    {% for talk in available_talks %}
+    <form action="{% url 'propose-event-talk' event.id %}" method="POST">
+      {% csrf_token %}
+      <div class="col-md-4">
+        <div class="card mb-4 box-shadow" style="width: 18rem;">
+          <div class="card-body">
+            <p class="card-title" style="height: 2rem;"><strong><a
+                  href="{% url 'show-talk' talk.id %}">{{talk.title}}</a></strong></p>
+            <div class="card-text">
+              <small class="text-muted mb-1">{{ talk.speaker }}</small>
+              <button class="btn btn-primary" type="submit" name="talk_id"
+                value="{{talk.id}}">{% trans "Propose" %}</a></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </form>
+    {% endfor %}
+  </div>
+  <div class="row">
+    <div class="col">
+      <a href="{{event.get_absolute_url}}" class="btn btn-secondary">{% trans "Cancel" %}</a>
+      <a href="{% url 'add-talk' %}?event={{event.id}}" class="btn btn-success">{% trans "New Talk" %}</a>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
-
