--- a/get_together/templates/get_together/users/show_profile.html
+++ b/get_together/templates/get_together/users/show_profile.html
@@ -1,11 +1,6 @@
 {% extends "get_together/base.html" %}
 {% load static i18n %}
 
-{% block styles %}
-    <link href="{% static 'css/bootstrap-album.css' %}" rel="stylesheet"/>
-
-{% endblock %}
-
 {% block content %}
 
 {% if user %}
@@ -14,11 +9,12 @@
         <div class="col-md-2"></div>
         <div class="col-md-7">
             <div class="h2">
-                <img class="align-bottom mr-3" border="1" src="{{user.avatar_url}}" height="128px"/>{{ user.realname}}
+                <img class="align-bottom mr-3" border="1" src="{{user.avatar_url}}" height="128px" />{{ user.realname}}
                 {% if user.user.id == request.user.id %}
                 <div class="btn-group dropdown">
-                    <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" id="editMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            {% trans "Edit" %}
+                    <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" id="editMenuButton"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        {% trans "Edit" %}
                     </button>
                     <div class="dropdown-menu" aria-labelledby="editMenuButton">
                         <a href="{% url 'password_change'  %}" class="dropdown-item">{% trans "Change Password" %}</a>
@@ -26,7 +22,8 @@
                         <a href="{% url 'user-talks'  %}" class="dropdown-item">{% trans "Talks" %}</a>
                     </div>
                 </div>
-                <a href="{% url 'user-event-ical' request.user.profile.secret_key %}" class="btn btn-success btn-sm">iCal</a>
+                <a href="{% url 'user-event-ical' request.user.profile.secret_key %}"
+                    class="btn btn-success btn-sm">iCal</a>
                 {% endif %}
 
             </div>
@@ -34,29 +31,33 @@
             <div class="container container-secondary mb-3">
                 {% if user.web_url %}
                 <div class="row">
-                    <div class="col-md-3">{% trans "Homepage:" %}</div><div class="col-md-3"><a href="{{user.web_url}}" target="_blank">{{user.web_url}}</a></div>
+                    <div class="col-md-3">{% trans "Homepage:" %}</div>
+                    <div class="col-md-3"><a href="{{user.web_url}}" target="_blank">{{user.web_url}}</a></div>
                 </div>
                 {% endif %}
                 <div class="row">
-                    <div class="col-md-3">{% trans "Timezone:" %}</div><div class="col-md-3">{{user.tz}}</div>
+                    <div class="col-md-3">{% trans "Timezone:" %}</div>
+                    <div class="col-md-3">{{user.tz}}</div>
                 </div>
             </div>
 
 
-        {% if upcoming_events %}
+            {% if upcoming_events %}
             <div class="container container-secondary mb-3">
                 <h4>{% trans "Upcoming Events" %}</h4>
                 {% for event in upcoming_events %}
                 <div class="row{% if event.status == event.CANCELED %} text-muted{% endif %}">
-                    <div class="col">{% if event.status == event.CANCELED %}<del>{% endif %}<a href="{{ event.get_absolute_url }}">{{event.name}}</a>{% if event.status == event.CANCELED %}</del> ({% trans "Canceled" %}){% endif %}</div>
+                    <div class="col">{% if event.status == event.CANCELED %}<del>{% endif %}<a
+                                href="{{ event.get_absolute_url }}">{{event.name}}</a>{% if event.status == event.CANCELED %}</del>
+                        ({% trans "Canceled" %}){% endif %}</div>
                     <div class="col"><small>{{ event.place }}</small></div>
                     <div class="col"><small>{{ event.local_start_time }}</small></div>
                 </div>
                 {% endfor %}
             </div>
-        {% endif %}
+            {% endif %}
 
-        {% if recent_events %}
+            {% if recent_events %}
             <div class="container container-secondary mb-3">
                 <h4>{% trans "Past Events" %}</h4>
                 {% for event in recent_events %}
@@ -67,54 +68,56 @@
                 </div>
                 {% endfor %}
             </div>
-        {% endif %}
+            {% endif %}
 
-        {% if talks %}
+            {% if talks %}
             <h3>{% trans "Talks" %}</h3>
             <div class="container container-secondary mb-3">
-            {% for talk in talks %}
-            <div class="row">
-                <div class="col-md-6">
-                    <a href="{% url 'show-talk' talk.id %}">{{talk.title}}</a>
+                {% for talk in talks %}
+                <div class="row">
+                    <div class="col-md-6">
+                        <a href="{% url 'show-talk' talk.id %}">{{talk.title}}</a>
+                    </div>
+                    <div class="col-md-6">
+                        <small class="text-muted mb-1">{{ talk.speaker }}</small>
+                    </div>
                 </div>
-                <div class="col-md-6">
-                    <small class="text-muted mb-1">{{ talk.speaker }}</small>
-                </div>
+                {% endfor %}
             </div>
-            {% endfor %}
-            </div>
-        {% endif %}
+            {% endif %}
         </div>
         <div class="col-md-3">
             {% if badges %}
-                <div class="container container-secondary mb-3">
+            <div class="container container-secondary mb-3">
                 <h4>{% trans "Badges" %}</h4>
                 <div class="mb-3">
-                {% for badge in badges %}
-		            <div class="ml-3 mb-1">
-			            <img class="mr-2 gt-profile-badge" src="{{badge.img_url}}" width="24px" height="24px" align="baseline">{{badge.name}}
-		            </div>
-                {% endfor %}
+                    {% for badge in badges %}
+                    <div class="ml-3 mb-1">
+                        <img class="mr-2 gt-profile-badge" src="{{badge.img_url}}" width="24px" height="24px"
+                            align="baseline">{{badge.name}}
+                    </div>
+                    {% endfor %}
                 </div>
-                </div>
+            </div>
             {% endif %}
             {% if teams %}
-                <div class="container container-secondary mb-3">
+            <div class="container container-secondary mb-3">
                 <h4>{% trans "Teams" %}</h4>
                 {% for t in teams %}
-		            <a href="{% url 'show-team-by-slug' t.slug %}" title="Team page for {{t.name}}"><i class="fa fa-users">&nbsp;</i>{{t.name}}</a><br/>
+                <a href="{% url 'show-team-by-slug' t.slug %}" title="Team page for {{t.name}}"><i
+                        class="fa fa-users">&nbsp;</i>{{t.name}}</a><br />
                 {% endfor %}
-                </div>
+            </div>
             {% endif %}
             <div class="container container-secondary mb-3">
-            <h4>{% trans "Categories" %}</h4>
-            <ul>
-            {% for c in user.categories.all %}
-	            <li>
-		            {{c.name}}
-	            </li>
-            {% endfor %}
-            </ul>
+                <h4>{% trans "Categories" %}</h4>
+                <ul>
+                    {% for c in user.categories.all %}
+                    <li>
+                        {{c.name}}
+                    </li>
+                    {% endfor %}
+                </ul>
             </div>
         </div>
     </div>
