--- a/get_together/templates/get_together/base.html
+++ b/get_together/templates/get_together/base.html
@@ -1,175 +1,182 @@
 {% load static markup i18n %}
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
 
-    <title>{% block title %}Get Together{% block add_to_title %}{% endblock %}{% endblock %}</title>
-    <!-- <link rel="icon" href="{% static 'img/iconv1_64.png' %}"> -->
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <!-- FAVICON STARTS -->
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="192x192" href="{% static 'favicon/android-chrome-192x192.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
-    <link rel="manifest" href="{% static 'favicon/site.webmanifest' %}">
-    <link rel="mask-icon" href="{% static 'favicon/safari-pinned-tab.svg" color="#384244' %}">
-    <meta name="apple-mobile-web-app-title" content="GetTogether">
-    <meta name="application-name" content="GetTogether">
-    <meta name="msapplication-TileColor" content="#2d89ef">
-    <meta name="msapplication-TileImage" content="{% static 'favicon/mstile-144x144.png' %}">
-    <meta name="theme-color" content="#ffffff">
-    <!-- FAVICON ENDS -->
+  <title>{% block title %}Get Together{% block add_to_title %}{% endblock %}{% endblock %}</title>
+  <!-- <link rel="icon" href="{% static 'images/iconv1_64.png' %}"> -->
 
-    {% block meta %}{% endblock %}
+  <!-- FAVICON STARTS -->
+  <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
+  <link rel="icon" type="image/png" sizes="192x192" href="{% static 'favicon/android-chrome-192x192.png' %}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
+  <link rel="manifest" href="{% static 'favicon/site.webmanifest' %}">
+  <link rel="mask-icon" href="{% static 'favicon/safari-pinned-tab.svg" color="#384244' %}">
+  <meta name="apple-mobile-web-app-title" content="GetTogether">
+  <meta name="application-name" content="GetTogether">
+  <meta name="msapplication-TileColor" content="#2d89ef">
+  <meta name="msapplication-TileImage" content="{% static 'favicon/mstile-144x144.png' %}">
+  <meta name="theme-color" content="#ffffff">
+  <!-- FAVICON ENDS -->
 
-    {% if settings.GOOGLE_ANALYTICS_ID and not request.user.profile.do_not_track %}
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id={{settings.GOOGLE_ANALYTICS_ID}}"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+  {% block meta %}{% endblock %}
 
-      gtag('config', '{{settings.GOOGLE_ANALYTICS_ID}}');
+  {% if settings.GOOGLE_ANALYTICS_ID and not request.user.profile.do_not_track %}
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id={{settings.GOOGLE_ANALYTICS_ID}}"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-       // GA Events
-      {% for event in ga_events %}
-      {{ event.gtag }}
-      {% endfor %}
-      {% block extra_google_analytics %}{% endblock %}
-    </script>
-    {% else %}
-      {% comment %}delete any analytics events recorded in this session" {% endcomment %}
-      {% for event in ga_events %}{% endfor %}
-    {% endif %}
+    gtag('config', '{{settings.GOOGLE_ANALYTICS_ID}}');
 
-    {% if settings.MATOMO_HOST and settings.MATOMO_SITE_ID and not request.user.profile.do_not_track %}
-    <!-- Matomo -->
-    <script type="text/javascript">
-      var _paq = window._paq || [];
-      /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-      _paq.push(['trackPageView']);
-      _paq.push(['enableLinkTracking']);
-      (function() {
-        var u="//{{settings.MATOMO_HOST}}/";
-        _paq.push(['setTrackerUrl', u+'matomo.php']);
-        _paq.push(['setSiteId', '{{settings.MATOMO_SITE_ID}}']);
-        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-        g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
-      })();
-    </script>
-    <!-- End Matomo Code -->
-    {% endif %}
+    // GA Events
+    {% for event in ga_events %}
+    { { event.gtag } }
+    {% endfor %}
+    {% block extra_google_analytics %} {% endblock %}
+  </script>
+  {% else %}
+  {% comment %}delete any analytics events recorded in this session" {% endcomment %}
+  {% for event in ga_events %}{% endfor %}
+  {% endif %}
 
-    {% block scripts %}{% endblock %}
+  {% if settings.MATOMO_HOST and settings.MATOMO_SITE_ID and not request.user.profile.do_not_track %}
+  <!-- Matomo -->
+  <script type="text/javascript">
+    var _paq = window._paq || [];
+    /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+    _paq.push(['trackPageView']);
+    _paq.push(['enableLinkTracking']);
+    (function () {
+      var u = "//{{settings.MATOMO_HOST}}/";
+      _paq.push(['setTrackerUrl', u + 'matomo.php']);
+      _paq.push(['setSiteId', '{{settings.MATOMO_SITE_ID}}']);
+      var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
+      g.type = 'text/javascript'; g.async = true; g.defer = true; g.src = u + 'matomo.js'; s.parentNode.insertBefore(g, s);
+    })();
+  </script>
+  <!-- End Matomo Code -->
+  {% endif %}
 
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap/css/bootstrap.min.css' %}">
-    <link href="{% static 'js/tether/css/tether.min.css' %}" rel="stylesheet">
-    <link href="{% static 'js/jquery-ui/jquery-ui.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/get_together.css' %}" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/fontawesome/all.css' %}">
-    <!-- style overrides -->
-    {% block styles %}{% endblock %}
+  <script type="text/javascript" defer src="{% static 'js/app.js' %}"></script>
+  {% block scripts %}{% endblock %}
 
-  </head>
-  <body>
+  <link rel="stylesheet" href="{% static 'css/app.css' %}">
+  {% block styles %}{% endblock %}
 
-   <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse fixed-top">
-      <a class="navbar-brand" href="/"><img src="{% static theme.images.nav_logo %}"/></a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+</head>
 
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item{% if request.resolver_match.url_name == "events" or request.resolver_match.url_name == "all-events" %} active{% endif %}">
-            <a class="nav-link" href="{% url 'events' %}"><i class="far fa-calendar-alt"></i> {% trans "Events" %}{% if request.resolver_match.url_name == "events" %} <span class="sr-only">(current)</span>{% endif %}</a>
-          </li>
-          <li class="nav-item{% if request.resolver_match.url_name == "teams" or request.resolver_match.url_name == "all-teams" %} active{% endif %}">
-            <a class="nav-link" href="{% url 'teams' %}"><i class="fa fa-users"></i>  {% trans "Teams" %}{% if request.resolver_match.url_name == "teams" %} <span class="sr-only">(current)</span>{% endif %}</a>
-          </li>
-          {% comment %}
-          <li class="nav-item{% if request.resolver_match.url_name == "places" %} active{% endif %}">
-            <a class="nav-link" href="{% url 'places' %}">Places{% if request.resolver_match.url_name == "places" %} <span class="sr-only">(current)</span>{% endif %}</a>
-          </li>
-          {% endcomment %}
-        </ul>
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="btn btn-primary" href="{% url 'new-event-start' %}"><i class="{{ theme.actions.host_event.icon }}"></i> {{ theme.actions.host_event.label }}</a>
-          </li>
-            {% if request.user.is_authenticated %}
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarUserMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <img class="rounded-circle mr-1" src="{{request.user.profile.avatar_url}}" height="24px"/>{% if request.user.profile.realname %}{{ request.user.profile.realname }}{% else %}{{ request.user.username }}{% endif %}
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarUserMenuLink">
-                  <a class="dropdown-item" href="{% url 'show-profile' request.user.profile.id %}"><i class="fa fa-user"></i>  {% trans "Profile" %}</a>
-                  <a class="dropdown-item" href="{% url 'logout' %}"><i class="fa fa-sign-out-alt"></i>  {% trans "Logout" %}</a>
-                </div>
-            </li>
-            {% else %}
-            <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">{% trans "Signup or Login" %}</a></li>
-            {% endif %}
-        </ul>
-      </div>
-    </nav>
+<body>
 
-    <main role="main" class="container">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/"><img src="{% static theme.images.nav_logo %}" /></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-      {% block account_setup_alert %}
-      {% if account_needs_setup %}
-      <div class="alerts">
-          <div class="alert alert-warning">
-            {% blocktrans %}<a href="{{account_setup_url}}">Click here</a> to finish your account setup.{% endblocktrans %}
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li
+          class="nav-item{% if request.resolver_match.url_name == "events" or request.resolver_match.url_name == "all-events" %} active{% endif %}">
+          <a class="nav-link" href="{% url 'events' %}"><i class="far fa-calendar-alt"></i>
+            {% trans "Events" %}{% if request.resolver_match.url_name == "events" %} <span
+              class="sr-only">(current)</span>{% endif %}</a>
+        </li>
+        <li
+          class="nav-item{% if request.resolver_match.url_name == "teams" or request.resolver_match.url_name == "all-teams" %} active{% endif %}">
+          <a class="nav-link" href="{% url 'teams' %}"><i class="fa fa-users"></i>
+            {% trans "Teams" %}{% if request.resolver_match.url_name == "teams" %} <span
+              class="sr-only">(current)</span>{% endif %}</a>
+        </li>
+        {% comment %}
+        <li class="nav-item{% if request.resolver_match.url_name == "places" %} active{% endif %}">
+          <a class="nav-link" href="{% url 'places' %}">Places{% if request.resolver_match.url_name == "places" %} <span
+              class="sr-only">(current)</span>{% endif %}</a>
+        </li>
+        {% endcomment %}
+      </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="btn btn-primary" href="{% url 'new-event-start' %}"><i
+              class="{{ theme.actions.host_event.icon }}"></i> {{ theme.actions.host_event.label }}</a>
+        </li>
+        {% if request.user.is_authenticated %}
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarUserMenuLink" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            <img class="rounded-circle mr-1" src="{{request.user.profile.avatar_url}}"
+              height="24px" />{% if request.user.profile.realname %}{{ request.user.profile.realname }}{% else %}{{ request.user.username }}{% endif %}
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarUserMenuLink">
+            <a class="dropdown-item" href="{% url 'show-profile' request.user.profile.id %}"><i class="fa fa-user"></i>
+              {% trans "Profile" %}</a>
+            <a class="dropdown-item" href="{% url 'logout' %}"><i class="fa fa-sign-out-alt"></i>
+              {% trans "Logout" %}</a>
           </div>
-      </div>
-      {% endif %}
-      {% endblock %}
+        </li>
+        {% else %}
+        <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">{% trans "Signup or Login" %}</a></li>
+        {% endif %}
+      </ul>
+    </div>
+  </nav>
 
-      {% if tip %}
-      <div class="alerts">
-          <div class="alert {{ tip.tags }}"><strong>{% trans "Tip:" %} </strong>{{ tip.text|safe }}</div>
-      </div>
-      {% endif %}
+  <main role="main" class="container">
 
-      {% if messages %}
+    {% block account_setup_alert %}
+    {% if account_needs_setup %}
     <div class="alerts">
-        {% for message in messages %}
-        <div class="alert{% if message.tags %} {{ message.tags }}{% endif %}">{{ message }}</div>
-        {% endfor %}
+      <div class="alert alert-warning">
+        {% blocktrans %}<a href="{{account_setup_url}}">Click here</a> to finish your account setup.{% endblocktrans %}
+      </div>
+    </div>
+    {% endif %}
+    {% endblock %}
+
+    {% if tip %}
+    <div class="alerts">
+      <div class="alert {{ tip.tags }}"><strong>{% trans "Tip:" %} </strong>{{ tip.text|safe }}</div>
     </div>
     {% endif %}
 
-{% block content %}{% endblock %}
-    </main>
+    {% if messages %}
+    <div class="alerts">
+      {% for message in messages %}
+      <div class="alert{% if message.tags %} {{ message.tags }}{% endif %}">{{ message }}</div>
+      {% endfor %}
+    </div>
+    {% endif %}
 
-{% load flatpages %}
-{% get_flatpages as flatpages %}
-    <footer class="footer mt-3">
-      <div class="container">
-        <div class="row">
-            <div class="col">
-                <ul class="list-group list-group-flush">
-                    {% for page in flatpages %}
-                        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-                    {% endfor %}
-                </ul>
-            </div>
+    {% block content %}{% endblock %}
+  </main>
+
+  {% load flatpages %}
+  {% get_flatpages as flatpages %}
+  <footer class="footer mt-3">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <ul class="list-group list-group-flush">
+            {% for page in flatpages %}
+            <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+            {% endfor %}
+          </ul>
         </div>
       </div>
-    </footer>
-    <!-- Bootstrap core JavaScript
+    </div>
+  </footer>
+  <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/tether/js/tether.min.js' %}"></script>
-    <script src="{% static 'js/jquery-ui/jquery-ui.min.js' %}"></script>
-    <script src="{% static 'css/bootstrap/js/bootstrap.js' %}"></script>
-{% block javascript %}{% endblock %}
+  <!-- Placed at the end of the document so the pages load faster -->
+  {% block javascript %}{% endblock %}
+
 </html>
