--- a/get_together/templates/get_together/new_user/setup_2_pick_categories.html
+++ b/get_together/templates/get_together/new_user/setup_2_pick_categories.html
@@ -1,10 +1,6 @@
 {% extends "get_together/base.html" %}
 {% load static i18n %}
 
-{% block styles %}
-    <link href="{% static 'css/bootstrap-album.css' %}" rel="stylesheet"/>
-{% endblock %}
-
 {% block account_setup_alert %}
 {% endblock %}
 
@@ -19,37 +15,36 @@
     </div>
     <form action="{% url 'setup-2-pick-categories' %}" method="POST" class="form">
         {% csrf_token %}
-    <div class="row">
-    {% for category in categories %}
-        <div class="col-md-4">
-          <div class="card mb-4 box-shadow">
-            <div class="card-banner">
-              <img class="card-img-top" src="{{category.img_url}}" alt="{{category.name}}">
-              <p class="card-title">{{category.name}}</p>
-            </div>
-            <div class="card-body">
-              <p class="card-text">{{category.description}}</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group-toggle" data-toggle="buttons">
-                    <label class="btn btn-outline-primary category_toggle">
-                        <input name="category_{{category.id}}" type="checkbox" autocomplete="off"> {% trans "Add" %}
-                    </label>
+        <div class="row">
+            {% for category in categories %}
+            <div class="col-md-4">
+                <div class="card mb-4 box-shadow">
+                    <div class="card-banner">
+                        <img class="card-img-top" src="{{category.img_url}}" alt="{{category.name}}">
+                        <p class="card-title">{{category.name}}</p>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">{{category.description}}</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group-toggle" data-toggle="buttons">
+                                <label class="btn btn-outline-primary category_toggle">
+                                    <input name="category_{{category.id}}" type="checkbox" autocomplete="off">
+                                    {% trans "Add" %}
+                                </label>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
+            {% endfor %}
         </div>
-    {% endfor %}
-    </div>
-    <div class="row pb-5">
-        <div class="col-12">
-            <center>
-                <button class="btn btn-success pl-5 pr-5" type="submit">{% trans "Continue" %}</button>
-            </center>
+        <div class="row pb-5">
+            <div class="col-12">
+                <center>
+                    <button class="btn btn-success pl-5 pr-5" type="submit">{% trans "Continue" %}</button>
+                </center>
+            </div>
         </div>
-    </div>
     </form>
 </div>
 {% endblock %}
-
-
