--- a/get_together/templates/get_together/speakers/show_speaker.html
+++ b/get_together/templates/get_together/speakers/show_speaker.html
@@ -1,57 +1,57 @@
 {% extends "get_together/base.html" %}
 {% load markup static i18n %}
 
-{% block styles %}
-    <link href="{% static 'css/bootstrap-album.css' %}" rel="stylesheet"/>
-
-{% endblock %}
-
 {% block content %}
 <div class="container">
     <div class="row">
         <div class="col-md-9">
-            <img src="{{speaker.headshot_url}}"/>                
+            <img src="{{speaker.headshot_url}}" />
             {% if speaker.user == request.user.profile %}
             <a href="{% url 'edit-speaker' speaker.id %}" class="btn btn-secondary btn-sm">{% trans "Edit Bio" %}</a>
             {% endif %}
-            <hr/>
+            <hr />
             <h3>{{ speaker.user }}</h3>
             {% if speaker.title %}<h5 class="text-muted">{{ speaker.title }}</h5>{% endif %}
             <p>
                 {{ speaker.bio|markdown }}
             </p>
 
-{% if talks %}
-        <br/>
-        <h4>{% trans "Talks" %}</h4>
-        <div class="container">
-        <div class="row">
-        {% for talk in talks %}
-            <div class="col-md-4">
-              <div class="card box-shadow" >
-                <div class="card-body">
-                  <p class="card-title"><strong><a href="{% url 'show-talk' talk.id %}">{{talk.title}}</a></strong></p>
-                  <div class="card-text">
-                    <small class="text-muted mb-1">{{ talk.speaker }}</small>
-                  </div>
+            {% if talks %}
+            <br />
+            <h4>{% trans "Talks" %}</h4>
+            <div class="container">
+                <div class="row">
+                    {% for talk in talks %}
+                    <div class="col-md-4">
+                        <div class="card box-shadow">
+                            <div class="card-body">
+                                <p class="card-title"><strong><a
+                                            href="{% url 'show-talk' talk.id %}">{{talk.title}}</a></strong></p>
+                                <div class="card-text">
+                                    <small class="text-muted mb-1">{{ talk.speaker }}</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
                 </div>
-              </div>
             </div>
-        {% endfor %}
-        </div>
-        </div>
-{% endif %}
+            {% endif %}
         </div>
         <div class="col-md-3">
             <div class="container">
                 <div class="row">
-                    <div class="col"><h4>{% trans "Events" %} ({{presentations.count}})</h4><hr/></div>
+                    <div class="col">
+                        <h4>{% trans "Events" %} ({{presentations.count}})</h4>
+                        <hr />
+                    </div>
                 </div>
                 {% for presentation in presentations %}
                 <div class="row mb-3">
                     <div class="col">
-                        <h6 class="mt-2 mb-0"><a href="{{presentation.event.get_absolute_url}}">{{presentation.event.name}}</a></h6>
-                        <small>{{ presentation.event.team }}</small><br/>
+                        <h6 class="mt-2 mb-0"><a
+                                href="{{presentation.event.get_absolute_url}}">{{presentation.event.name}}</a></h6>
+                        <small>{{ presentation.event.team }}</small><br />
                         <small class="text-muted">{{ presentation.event.local_start_time }}</small>
                     </div>
                 </div>
@@ -62,4 +62,3 @@
     </div>
 </div>
 {% endblock %}
-
