--- a/get_together/templates/get_together/users/login.html
+++ b/get_together/templates/get_together/users/login.html
@@ -1,59 +1,69 @@
 {% extends "get_together/base.html" %}
 {% load static i18n %}
 
-{% block styles %}
-    <link href="{% static 'css/bootstrap-album.css' %}" rel="stylesheet"/>
-{% endblock %}
-
 {% block content %}
 <center>
-<h3>{% trans "Login to your account" %}</h3>
-<div class="container container-secondary box-shadow mt-4 mb-4 pt-4 pb-4" style="width: 400px">
-    <div >
-        <div >
+  <h3>{% trans "Login to your account" %}</h3>
+  <div class="container container-secondary box-shadow mt-4 mb-4 pt-4 pb-4" style="width: 400px">
+    <div>
+      <div>
         <center>
-                {% if settings.SOCIAL_AUTH_GOOGLE_OAUTH2_KEY %}<a class="btn btn-googleplus mb-1 col-8" href="{% url 'social:begin' 'google-oauth2' %}?{{ request.META.QUERY_STRING }}"><i class="fab fa-google"></i> Google</a></br>{% endif %}
-                {% if settings.SOCIAL_AUTH_FACEBOOK_KEY %}<a class="btn btn-facebook mb-1 col-8" href="{% url 'social:begin' 'facebook' %}?{{ request.META.QUERY_STRING }}"><i class="fab fa-facebook"></i> Facebook</a></br>{% endif %}
-                {% if settings.SOCIAL_AUTH_TWITTER_KEY %}<a class="btn btn-twitter mb-1 col-8" href="{% url 'social:begin' 'twitter' %}?{{ request.META.QUERY_STRING }}"><i class="fab fa-twitter"></i> Twitter</a></br>{% endif %}
-                {% comment %}{% if settings.SOCIAL_AUTH_LINKEDIN_KEY %}<a class="btn btn-linkedin mb-1 col-8" href="{% url 'social:begin' 'linkedin' %}?{{ request.META.QUERY_STRING }}"><i class="fab fa-linkedin"></i> LinkedIn</a></br>{% endif %}{% endcomment %}
-                {% if settings.SOCIAL_AUTH_GITHUB_KEY %}<a class="btn btn-github mb-1 col-8" href="{% url 'social:begin' 'github' %}?{{ request.META.QUERY_STRING }}"><i class="fab fa-github"></i> GitHub</a></br>{% endif %}
-            <p class="text-muted small mt-2">{% trans "OR" %}</p>
-        <div>
+          {% if settings.SOCIAL_AUTH_GOOGLE_OAUTH2_KEY %}<a class="btn btn-googleplus mb-1 col-8"
+            href="{% url 'social:begin' 'google-oauth2' %}?{{ request.META.QUERY_STRING }}"><i
+              class="fab fa-google"></i> Google</a></br>{% endif %}
+          {% if settings.SOCIAL_AUTH_FACEBOOK_KEY %}<a class="btn btn-facebook mb-1 col-8"
+            href="{% url 'social:begin' 'facebook' %}?{{ request.META.QUERY_STRING }}"><i class="fab fa-facebook"></i>
+            Facebook</a></br>{% endif %}
+          {% if settings.SOCIAL_AUTH_TWITTER_KEY %}<a class="btn btn-twitter mb-1 col-8"
+            href="{% url 'social:begin' 'twitter' %}?{{ request.META.QUERY_STRING }}"><i class="fab fa-twitter"></i>
+            Twitter</a></br>{% endif %}
+          {% comment %}{% if settings.SOCIAL_AUTH_LINKEDIN_KEY %}<a class="btn btn-linkedin mb-1 col-8"
+            href="{% url 'social:begin' 'linkedin' %}?{{ request.META.QUERY_STRING }}"><i class="fab fa-linkedin"></i>
+            LinkedIn</a></br>{% endif %}{% endcomment %}
+          {% if settings.SOCIAL_AUTH_GITHUB_KEY %}<a class="btn btn-github mb-1 col-8"
+            href="{% url 'social:begin' 'github' %}?{{ request.META.QUERY_STRING }}"><i class="fab fa-github"></i>
+            GitHub</a></br>{% endif %}
+          <p class="text-muted small mt-2">{% trans "OR" %}</p>
+          <div>
             <ul class="nav nav-tabs justify-content-center mb-2" id="localTab" role="tablist">
               <li class="nav-item">
-                <a class="nav-link {% if action != 'signup' %}active{% endif %}" id="login-tab" data-toggle="tab" href="#login" role="tab" aria-controls="login" aria-selected="true">{% trans "Login" %}</a>
+                <a class="nav-link {% if action != 'signup' %}active{% endif %}" id="login-tab" data-toggle="tab"
+                  href="#login" role="tab" aria-controls="login" aria-selected="true">{% trans "Login" %}</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {% if action == 'signup' %}active{% endif %}" id="signup-tab" data-toggle="tab" href="#signup" role="tab" aria-controls="signup" aria-selected="false">{% trans "Signup" %}</a>
+                <a class="nav-link {% if action == 'signup' %}active{% endif %}" id="signup-tab" data-toggle="tab"
+                  href="#signup" role="tab" aria-controls="signup" aria-selected="false">{% trans "Signup" %}</a>
               </li>
             </ul>
             <div class="tab-content" id="localFormContent">
-              <div class="tab-pane fade {% if action != 'signup' %}show active{% endif %}" id="login" role="tabpanel" aria-labelledby="login-tab">
+              <div class="tab-pane fade {% if action != 'signup' %}show active{% endif %}" id="login" role="tabpanel"
+                aria-labelledby="login-tab">
                 <form action="#" method="POST">
-                    {% csrf_token %}
-                    <table>
+                  {% csrf_token %}
+                  <table>
                     {{ login_form }}
-                    </table>
-                    <button class="btn btn-primary" type="submit" name="action" value="login">{% trans "Login" %}</button>
+                  </table>
+                  <button class="btn btn-primary" type="submit" name="action" value="login">{% trans "Login" %}</button>
                 </form>
                 <br /><br />
                 <a href="{% url 'password_reset' %}">{% trans "Forgot my password" %}</a>
               </div>
-              <div class="tab-pane fade {% if action == 'signup' %}show active{% endif %}" id="signup" role="tabpanel" aria-labelledby="signup-tab">
+              <div class="tab-pane fade {% if action == 'signup' %}show active{% endif %}" id="signup" role="tabpanel"
+                aria-labelledby="signup-tab">
                 <form action="#" method="POST">
-                    {% csrf_token %}
-                    <table class="table">
+                  {% csrf_token %}
+                  <table class="table">
                     {{ signup_form }}
-                    </table>
-                    <button class="btn btn-primary" type="submit" name="action" value="signup">{% trans "Signup" %}</button>
+                  </table>
+                  <button class="btn btn-primary" type="submit" name="action"
+                    value="signup">{% trans "Signup" %}</button>
                 </form>
               </div>
             </div>
-        </div>
+          </div>
         </center>
-        </div>
+      </div>
     </div>
-</div>
+  </div>
 </center>
 {% endblock %}
-
